Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16980

format-truncation errors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      While building master branch against kernel 6.2.0-26-generic with gcc 12.2.0, the following errors occurred:

      liblnetconfig.c: In function 'open_sysfs_file':
      liblnetconfig.c:106:49: error: '%s' directive output may be truncated writing up to 127 bytes into a region of size between 1 and 128 [-Werror=format-truncation=]
        106 |         snprintf(filename, sizeof(filename), "%s%s",
            |                                                 ^~
      
      lfs_project.c: In function ‘lfs_project_handle_dir’:
      lfs_project.c:324:50: error: ‘%s’ directive output may be truncated writing up to 255 bytes into a region of size between 1 and 4095 [-Werror=format-truncation=]
        324 |                 snprintf(fullname, PATH_MAX, "%s/%s", pathname,
            |                                                  ^~
      
      statx.c: In function ‘do_dir_list’:
      statx.c:1427:58: error: ‘%s’ directive output may be truncated writing up to 255 bytes into a region of size between 1 and 4095 [-Werror=format-truncation=]
       1427 |                         snprintf(fullname, PATH_MAX, "%s/%s",
            |                                                          ^~
      

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: